[gd_scene load_steps=5 format=3 uid="uid://dcuqfoy6vonab"]

[ext_resource type="Script" path="res://src/game_manager.gd" id="1_piiv7"]
[ext_resource type="PackedScene" uid="uid://cjtpdummuwgjf" path="res://src/utils/fish_parser.tscn" id="2_lj2iv"]
[ext_resource type="Script" path="res://addons/save-system/SaveManager.gd" id="3_4wwp8"]
[ext_resource type="Script" path="res://addons/save-system/CacheProperties.gd" id="4_80myg"]

[node name="GameManager" type="Node"]
script = ExtResource("1_piiv7")
common_color = Color(0, 1, 0, 1)
uncommon_color = Color(0, 0.576471, 1, 1)
rare_color = Color(1, 0.423529, 0, 1)
epic_color = Color(0.490196, 0, 1, 1)
legendary_color = Color(1, 1, 0, 1)

[node name="FishParser" parent="." instance=ExtResource("2_lj2iv")]

[node name="SaveManager" type="Node" parent="."]
script = ExtResource("3_4wwp8")

[node name="CacheProperties" type="Node" parent="."]
script = ExtResource("4_80myg")
properties = Array[String](["unlocked_fish", "aquarium", "day_time", "money", "purchased_upgrades", "aquarium_items"])
node_path = NodePath("..")
